# zcron

./: README.md
libs/: CMakeLists.txt
libs/boost.zcron/: CMakeLists.txt
libs/boost.zcron/boost/zcron/: all.hpp  clock.hpp  exceptions.hpp  jobs_unbounded_fifo.hpp  jobs_unbounded_prio_fifo.hpp  schedule_instant.hpp  schedule_now.hpp  schedule_periodic.hpp  schedule_regular.hpp  schedulers_pool.hpp  services_unbounded_prio_set.hpp  services_unbounded_set.hpp  tasks_context.hpp  tz_adjustor.hpp  tz_local_adjustor.hpp
libs/boost.zcron/boost/zcron/detail/: chrono_clock_bits.hpp  chrono_clock_cond.hpp  chrono_clock_util.hpp  config.hpp  jobs_unbounded_prio_queue.hpp  jobs_unbounded_queue.hpp  schedule_base.hpp  services_unbounded_prio_vec.hpp  services_unbounded_vec.hpp  tasks_context_base.hpp  tz_adjustor_base.hpp
libs/boost.zcron/boost/zcron/history/: acron.hpp  callback.hpp  history.hpp  job.hpp  monitor.hpp  runnable.hpp  service_id.hpp  service_mark.hpp
libs/boost.zcron/boost/zcron/history/detail/: callback_base.hpp  history_base.hpp  job_base.hpp  monitor_base.hpp
libs/boost.zcron/libs/zcron/test/: CMakeLists.txt  test_zcron01.cpp  test_zcron_schedule_instant.cpp  test_zcron_schedule_periodic.cpp  test_zcron_schedule_regular.cpp
libs/boost.ztask/: CMakeLists.txt
libs/boost.ztask/boost/ztask/: all.hpp  clock.hpp  exceptions.hpp  unbounded_fifo.hpp  unbounded_prio_fifo.hpp  workers_pool.hpp
libs/boost.ztask/boost/ztask/detail/: config.hpp  unbounded_prio_queue.hpp  unbounded_queue.hpp
libs/boost.ztask/boost/ztask/future/: async.hpp  callable.hpp  future.hpp  handle.hpp  promise_id.hpp  promise_mark.hpp  task.hpp
libs/boost.ztask/boost/ztask/future/detail/: future_base.hpp  handle_base.hpp  task_base.hpp
libs/boost.ztask/libs/ztask/test/: CMakeLists.txt  test_ztask01.cpp  test_ztask02.cpp  test_ztask03.cpp  test_ztask04.cpp
