include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set (ANYTESTS FALSE)
if ("${TESTS}" STREQUAL "all")
  set (ANYTESTS TRUE)
endif ()
if ("${TESTS}" STREQUAL "test_ztask01" OR ${ANYTESTS})
add_executable(test_ztask01 test_ztask01.cpp)
target_link_libraries(test_ztask01 m ${Boost141_LIBRARIES})
endif ()
if ("${TESTS}" STREQUAL "test_ztask02" OR ${ANYTESTS})
add_executable(test_ztask02 test_ztask02.cpp)
target_link_libraries(test_ztask02 m ${Boost141_LIBRARIES})
endif ()
if ("${TESTS}" STREQUAL "test_ztask03" OR ${ANYTESTS})
add_executable(test_ztask03 test_ztask03.cpp)
target_link_libraries(test_ztask03 m ${Boost141_LIBRARIES})
endif ()
if ("${TESTS}" STREQUAL "test_ztask04" OR ${ANYTESTS})
add_executable(test_ztask04 test_ztask04.cpp)
target_link_libraries(test_ztask04 m ${Boost141_LIBRARIES})
endif ()

